0.0.5 (Pending)
* Changed: Stop using absolute paths in requires.

0.0.4 (July 5, 2010)
* Changed: Separated code into separate files, moved project extension code into a separate module and moved
  the code into a hierarchy matching the module hierarchy.
* Added: Add class containing version information about the plugin.  

0.0.3 (June 1, 2010)
* Added: Buildr::Bnd.remote_repository method to get remote repository for bnd dependency.
* Deprecated: Buildr::Bnd.remote_repositories method that returned an array of repositories for bnd dependency.

0.0.2 (April 17, 2010)
* Added: Supported classpath_element method on package task

0.0.1 (April 16, 2010)
* Initial Release